2000-06-21  Michael Livshin  <mlivshin@bigfoot.com>

	* guile-doc-snarf.in: use cut instead of sed, that's much much
	faster.  also, don't call basename more than needed.  and, to gain 
	a couple of microseconds more, don't call cat needlessly.  (thanks 
	to Brad Knotwell).

2000-06-21  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* guile-snarf.awk.in, guile-snarf.in, snarf.h:  Rename SCM__I to
	SCM_SNARF_INIT_START, SCM__D to SCM_SNARF_DOC_START, SCM__S to
	SCM_SNARF_DOCSTRING_START and SCM__E to SCM_SNARF_DOCSTRING_END.

2000-06-21  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* eval.c, eval.h (scm_top_level_lookup_closure_var): Added.
	#include "libguile/fluids.h".

	* eval.h (SCM_TOP_LEVEL_LOOKUP_CLOSURE): New macro which replaces
	SCM_CDR (scm_top_level_lookup_closure_var) everywhere.

	* root.h (scm_top_level_lookup_closure_var,
	scm_system_transformer): Removed.  (It's no sense in having the
	*variable* be a "fluid".)

	* root.c (mark_root): Removed marking of
	s->top_level_lookup_closure_var and s->system_transformer.

	* modules.c (scm_selected_module): the_module is now a fluid.

2000-06-20  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* gc.h, tags.h: Be kind to compilers which must see hash signs in
	column 0.  (Thanks to Ian Grant.)

	* numbers.h: Put #ifdef HAVE_LONG_LONGS around declarations using
	the long_long type.  (Thanks to Bernard Urban.)

2000-06-20  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* gc.c, gc.h (scm_default_init_heap_size_1,
	scm_default_min_yield_1, scm_default_init_heap_size_2,
	scm_default_min_yield_2, scm_default_max_segment_size): New global
	variables.  Can be customized by the application before booting
	Guile.  (We might want to be able to control these parameters
	dynamically through the "options interface" in the future, but
	note that that is additional functionality.  Here we're giving
	default values which the environment variables can override.)

	* list.c (scm_cons_star): Updated comment.
