@@ -1,3 +1,8 @@
+2000-06-27  Dirk Herrmann  <D.Herrmann@tu-bs.de>
+
+	* async.c (scm_init_async):  Switch to standard way of smob
+	initialization.
+
 2000-06-21  Michael Livshin  <mlivshin@bigfoot.com>
 
 	* guile-doc-snarf.in: use cut instead of sed, that's much much
